# kernel_lab

./: .gitignore  AGENTS.md  LICENSE  README.md  bench_sm90_fa4.py  pyproject.toml  tunableop_results0.csv
.claude/: settings.json
agents/: api_server.py  config.py  direction.py  events.py  launcher.py  layer0_infra.py  library.py  main.py  monitor.py  response_router.py  runner.py  session_log.py  steward.py  storage.py  supervisor.py  workshop.py
conf/: config.yaml  fa4_venv_requirements.txt
cuda_agent/: AGENTS.md  CLAUDE.md  README.md  __main__.py  agent.py  blocked_tools.json  cli.py  config.py  inspect_cli.py  mcp_server.py  path_check.py  prompts.py  requirements.txt  skills.py  task.py
cuda_exec/: AGENTS.md  CLAUDE.md  CONTRACT_AUDIT.md  DESIGN.md  README.md  SERVICE_PROOF.md  TODO-evaluate-profile.md  __init__.py  auth.py  autotune.py  exec_cli.py  formal.py  gpu_clocks.py  host_env.py  impls.py  main.py  models.py  reflection.py  requirements.txt  runner.py  tasks.py  trajectory.py
doc_retrieval/: AGENTS.md  CLAUDE.md  Makefile  __init__.py  __main__.py  chunking.py  cli.py  config.py  downloader.py  embeddings.py  html_parser.py  indexer.py  parser.py  requirements.txt  searcher.py
docs/: SYSTEM_DESIGN.md  roofline
fa3/: __init__.py  build.py  config.py  wrapper.py
memory/: feedback_use_compile_sh.md  project_blackwell_vs_hopper_regs.md  project_fa4_4wg_breakthrough.md  project_fa4_4wg_design.md  project_fa4_4wg_final.md  project_fa4_4wg_inline_ptx.md  project_fa4_4wg_spill_analysis.md  project_fa4_4wg_wgmma_barrier.md  project_fa4_cutedsl_env.md  project_fa4_optimization_plan.md  project_fa4_optimization_results.md  project_fa4_optimization_target.md  project_fa4_persistent_kernel.md  project_fa4_pv_bugs.md  project_fa4_qkpv_overlap.md  (+4 more)
(+373 files in other folders)
