[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cuda_agent", "cuda_exec", "doc_retrieval"]

[project]
name = "kernel-lab"
version = "0.1.0"
description = "CUDA kernel optimization platform"
requires-python = ">=3.12"

dependencies = [
    # Agent SDK + MCP
    "claude-agent-sdk>=0.1,<1.0",
    "mcp>=1.20,<2.0",

    # HTTP
    "httpx>=0.27,<1.0",

    # Configuration
    "hydra-core>=1.3,<2.0",
    "omegaconf>=2.3,<3.0",

    # Doc retrieval
    "beautifulsoup4>=4.12,<5.0",
    "docling>=2.0,<3.0",
    "faiss-cpu>=1.8,<2.0",
    "numpy>=1.26,<3.0",
    "tiktoken>=0.7,<1.0",
    "openai>=1.30,<2.0",
    "rank-bm25>=0.2,<1.0",

    # cuda_exec service
    "fastapi>=0.116,<1.0",
    "uvicorn[standard]>=0.35,<1.0",
    "torch",
    "pydantic",
    "psutil",
    "ninja",
]

[project.optional-dependencies]
cutlass = ["nvidia-cutlass-dsl"]
dev = ["pytest>=8.0", "pyyaml>=6.0"]

[tool.pytest.ini_options]
testpaths = ["plugins", "cuda_exec/tests", "doc_retrieval/tests"]
markers = [
    "quick: fast tests, no remote access, under 5 seconds",
    "integration: requires remote GPU hosts via SSH",
    "gpu: requires local GPU",
]
addopts = "-m quick"
